fixat bild och stavfel

--- a/index.html
+++ b/index.html
@@ -197,15 +197,15 @@ html {
             <div class="w3-display-container">
               
               <p>
-                Jag &auml;r en erfaren arkitekt som tidigare huvudsakligen jobbat med vanliga kommersiella projekt; flerfamiljshus, v&aring;rdbyggnader och kontor samt detaljplaner. Jag har ocks&aring; varit handl&auml;ggare i tv&aring; riktigt stora projekt; Friends arenas entré- och konferensbyggnad samt SEB-nya huvudkontor p&aring; 96 000 kvm. Ut&ouml;ver det s&aring; har jag gjort en del inredningar och f&auml;rgs&auml;ttningar samt jobbat mycket med tillg&auml;nglighet.
+                Jag &auml;r en erfaren arkitekt som tidigare huvudsakligen jobbat med vanliga kommersiella projekt; flerfamiljshus, v&aring;rdbyggnader och kontor samt detaljplaner. Jag har ocks&aring; varit handl&auml;ggare i tv&aring; riktigt stora projekt; Friends arenas entré- och konferensbyggnad samt SEB:s nya huvudkontor p&aring; 96 000 kvm. Ut&ouml;ver det s&aring; har jag gjort en del inredningar och f&auml;rgs&auml;ttningar samt jobbat mycket med tillg&auml;nglighet.
               </p>
               <p>
-                F&ouml;r n&aring;gra &aring;r sedan, efter flera v&auml;ldigt stressiga &aring;r, s&aring; drabbades jag av utmattningssyndrom och har efter det f&ouml;rs&ouml;kt hitta en b&auml;ttre balans i vardagen. En s&auml;tt att f&aring; b&auml;ttre kontroll &ouml;ver min arbetssituation var att s&auml;ga upp mig och starta eget, f&ouml;r att kunna jobba med de fr&aring;gor som intresserar mig mest: byggnadsv&aring;rd och h&aring;llbart byggande.  
+                F&ouml;r n&aring;gra &aring;r sedan, efter flera v&auml;ldigt stressiga &aring;r, s&aring; drabbades jag av utmattningssyndrom och har efter det f&ouml;rs&ouml;kt hitta en b&auml;ttre balans i vardagen. Ett s&auml;tt att f&aring; b&auml;ttre kontroll &ouml;ver min arbetssituation var att s&auml;ga upp mig och starta eget f&ouml;r att kunna jobba med de fr&aring;gor som intresserar mig mest: byggnadsv&aring;rd och h&aring;llbart byggande.  
               </p>
               <p>
-                Jag har flera utbildningar inom byggnadsv&aring;rd och h&aring;llbart byggande (som ju har m&aring;nga paralleller) och jag har &auml;ven haft egna byggnadsv&aring;rdsprojekt. I nul&auml;get h&aring;ller jag dessutom p&aring; att renovera ett 1870-talshus p&aring; Gotland, med en blandning av traditionella tekniker och lerbygge. 
+                Jag har flera utbildningar inom byggnadsv&aring;rd och h&aring;llbart byggande (som ju har m&aring;nga paralleller) och jag har &auml;ven haft egna privata byggnadsv&aring;rdsprojekt. I nul&auml;get h&aring;ller min man och jag p&aring; att renovera ett 1870-talshus p&aring; Gotland med en blandning av traditionella tekniker och lerbygge. 
               </p>
-              <p>Till mina kunder kommer jag alltid att i f&ouml;rsta hand f&ouml;resl&aring; milj&ouml;v&auml;nliga och h&aring;llbara material och metoder.</p>
+              <p>Om du väljer mig som arkitekt kommer jag alltid att i f&ouml;rsta hand f&ouml;resl&aring; milj&ouml;v&auml;nliga och h&aring;llbara material och metoder.</p>
 
 
             </div>
@@ -282,7 +282,7 @@ html {
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container" onclick="openModal('solna');showDivs(1, 5)">
-        <div class="w3-display-topleft w3-black w3-padding">Solna</div>
+        <div class="w3-display-topleft w3-black w3-padding">Solna stad</div>
         <img src="images/SolnaSoc1.png" alt="House" style="width:99%">
       </div>
     </div>
@@ -336,7 +336,7 @@ html {
 
         <p>Jag har precis blivit tillfr&aring;gad om jag kan ta mig an ett halmbalsbyggprojekt p&aring; Gotland, sj&auml;lvklart sa jag ja! Helt i mitt intresseomr&aring;de men ocks&aring; helt nytt f&ouml;r mig, ser fram emot att l&auml;ra mig massa nya saker p&aring; v&auml;gen, kul &#128515; Mer om detta kommer s&auml;kerligen h&auml;r p&aring; sidan fram&ouml;ver.</p>
 
-        <p>Min man och jag har ett eget byggnadsv&aring;rdsprojekt som fortskrider s&aring; sakteliga d&auml;r vi renoverar ett litet hus fr&aring;n 1870 med fokus p&aring; lera b&aring;de i v&auml;ggar och golv. Om n&aring;gon &auml;r mer intresserad av vad vi g&ouml;r d&auml;r s&aring; kika g&auml;rna p&aring; v&aring;rt instagramkonto f&ouml;r projektet: @pinnmurshuset</p>
+        <p>Min man och jag har ett eget byggnadsv&aring;rdsprojekt som fortskrider s&aring; sakteliga d&auml;r vi renoverar ett litet hus fr&aring;n 1870 med fokus p&aring; lera b&aring;de i v&auml;ggar och golv. Om n&aring;gon &auml;r intresserad av vad vi g&ouml;r d&auml;r s&aring; kika g&auml;rna p&aring; v&aring;rt instagramkonto f&ouml;r projektet: @pinnmurshuset</p>
 
         <p>Foton: mina egna</p>
 
@@ -366,7 +366,7 @@ html {
       </div>
 
         <p><b>Friends Arena</b></p>
-        <p>Friends Arena &auml;r ett samarbetsprojekt mellan Berg Arkitektkontor och Krook &amp; Tj&auml;der och min f&ouml;rsta roll i detta projekt var under min anst&auml;llning p&aring; Berg Arkitektkontor d&aring; jag gick in som ansvarig f&ouml;r all tillg&auml;nglighet p&aring; arenan. Sedan blev jag inplockad i teamet som projekterade entrébyggnaden till arenan med huvudentré, sportbar, garage, restaurangk&ouml;k, konferenslokaler och g&aring;ngbro till det anslutande hotellet som Wing&aring;rdhs arkitekter jobbade med parallellt. Min roll var som handl&auml;ggare f&ouml;r alla ytor &ouml;ver markniv&aring; s&aring; det innebar m&aring;nga samordningsfr&aring;gor b&aring;de med &ouml;vriga projekt&ouml;rer och med Wing&aring;rdhs. Under denna tid s&aring; gick jag ocks&aring; &ouml;ver och blev anst&auml;lld p&aring; Krook &amp; Tj&auml;der. Kul projekt med m&aring;nga trevliga kontakter och problemst&auml;llningar.</p>
+        <p>Friends Arena var ett samarbetsprojekt mellan Berg Arkitektkontor och Krook &amp; Tj&auml;der och min f&ouml;rsta roll i detta projekt var under min anst&auml;llning p&aring; Berg Arkitektkontor d&aring; jag gick in som ansvarig f&ouml;r all tillg&auml;nglighet p&aring; arenan. Sedan blev jag inplockad i teamet som projekterade entrébyggnaden till arenan med huvudentré, sportbar, garage, restaurangk&ouml;k, konferenslokaler och g&aring;ngbro till det anslutande hotellet som Wing&aring;rdhs arkitekter jobbade med parallellt. Min roll var som handl&auml;ggare f&ouml;r alla ytor &ouml;ver markniv&aring; s&aring; det innebar m&aring;nga samordningsfr&aring;gor b&aring;de med &ouml;vriga projekt&ouml;rer och med Wing&aring;rdhs. Under denna tid s&aring; gick jag ocks&aring; &ouml;ver och blev anst&auml;lld p&aring; Krook &amp; Tj&auml;der. Kul projekt med m&aring;nga trevliga kontakter och problemst&auml;llningar.</p>
 
         <p>Uppdragsgivare: Peab<br/>
         Bilder: renderingar Krook &amp; Tj&auml;der</p>
@@ -422,9 +422,9 @@ html {
          </div>
 
           <p><b>Danske Bank – Pilotprojekt med BIG</b></p>
-          <p>Sommaren 2013 blev jag uppringd av det danska arkitektkontoret BIG som undrade om jag kunde vara deras lokala arkitekt i ett hemligt pilotprojekt som gick ut p&aring; att skapa en helt ny inredningsprofil f&ouml;r hela Danske Banks koncern och alla deras bankkontor &ouml;ver hela v&auml;rlden. Tv&aring; bankkontor skulle byggas om och inredas in i minsta detalj enligt det nya konceptet f&ouml;r att sedan utv&Auml;rderas. Ett l&aring;g i Trondheim och det andra p&aring; Flemminggatan i Stockholm. Klart att jag sa ja! Att de ringde just mig var f&ouml;r att lokalen, som ligger i Trygg Hansa-huset, f&ouml;rvaltas av Aberdeen Asset som jag gjort m&aring;nga hyresg&auml;stanpassningar &aring;t och handl&auml;ggaren p&aring; BIG hade fr&aring;gad Aberdeens lokalansvarige om hon kunde rekommendera n&aring;gon arkitekt i Stockholm och hon rekommenderade mig. Roligt!</p>
+          <p>Sommaren 2013 blev jag uppringd av det danska arkitektkontoret BIG som undrade om jag kunde vara deras lokala arkitekt i ett hemligt pilotprojekt som gick ut p&aring; att skapa en helt ny inredningsprofil f&ouml;r hela Danske Banks koncern och alla deras bankkontor &ouml;ver hela v&auml;rlden. Tv&aring; bankkontor skulle byggas om och inredas in i minsta detalj enligt det nya konceptet f&ouml;r att sedan utv&auml;rderas. Ett l&aring;g i Trondheim och det andra p&aring; Flemminggatan i Stockholm. Klart att jag sa ja! Att de ringde just mig var f&ouml;r att lokalen, som ligger i Trygg Hansa-huset, f&ouml;rvaltas av Aberdeen Asset som jag gjort m&aring;nga hyresg&auml;stanpassningar &aring;t och handl&auml;ggaren p&aring; BIG hade fr&aring;gat Aberdeens lokalansvarige om hon kunde rekommendera n&aring;gon arkitekt i Stockholm och hon rekommenderade mig. Roligt!</p>
 
-          <p>F&ouml;rutom att hj&auml;lpa till att granska s&aring; allt &ouml;verensst&auml;mde med svenska krav enligt BBR och h&aring;lla kontakter med Stadsbyggnadskontoret s&aring; var jag p&aring; bygget flera g&aring;nger i veckan och besiktigade alla material och allt montage. I Danmark har arkitekter en mer &ouml;vergripande roll &auml;n i Sverige och det var intressant att f&aring; testa p&aring; det s&auml;ttet att arbeta. Min roll var enbart som platsansvarig och typ Sverige-anpassare, allt arkitektoniskt arbete med utformning mm &auml;r utf&ouml;rt av BIG. Det var ett kul projekt att jobba med &auml;ven om det blev b&aring;de helger och kv&auml;llar eftersom jag f&ouml;rv&auml;ntades vara tillg&Auml;nglig mer eller mindre hela tiden. En tid efter&aring;t s&aring; &aring;terkom Danske Bank till mig med ett eget frist&aring;ende uppdrag som g&auml;llde en ombyggnad av ett mindre kontor i anslutning till detta pilotprojekt och det var ju ocks&aring; kul.</p>
+          <p>F&ouml;rutom att hj&auml;lpa till att granska s&aring; allt &ouml;verensst&auml;mde med svenska krav enligt BBR och h&aring;lla kontakter med Stadsbyggnadskontoret s&aring; var jag p&aring; bygget flera g&aring;nger i veckan och besiktigade alla material och allt montage. I Danmark har arkitekter en mer &ouml;vergripande roll &auml;n i Sverige och det var intressant att f&aring; testa p&aring; det s&auml;ttet att arbeta. Min roll var enbart som platsansvarig och typ Sverige-anpassare, allt arkitektoniskt arbete med utformning mm &auml;r utf&ouml;rt av BIG. Det var ett kul projekt att jobba med &auml;ven om det blev b&aring;de helger och kv&auml;llar eftersom jag f&ouml;rv&auml;ntades vara tillg&auml;nglig mer eller mindre hela tiden. En tid efter&aring;t s&aring; &aring;terkom Danske Bank till mig med ett eget frist&aring;ende uppdrag som g&auml;llde en ombyggnad av ett mindre kontor i anslutning till detta pilotprojekt och det var ju ocks&aring; kul.</p>
 
           <p>Uppdragsgivare: BIG<br/>
           Foton: mina egna</p>
@@ -629,7 +629,7 @@ html {
 
             <p>Uppdragsgivare: Skandia Fastigheter<br/>
             Bilder: renderingar Krook &amp; Tj&auml;der<br/> 
-            Foton: mina egna</p>
+            </p>
 
       </div>
     </div>
