removed close on click outside overlay. needs fix

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ html {
     </div>
   </div> <!-- end of ala -->
 
-  <div id="arenan" class="modal" onclick="closeModal('arenan')">
+  <div id="arenan" class="modal">
     <!-- Modal content -->
     <div class="modal-content">
       <span class="close" onclick="closeModal('arenan')">&times;</span>
@@ -376,7 +376,7 @@ html {
   </div> <!-- end of arenan -->
 
 
-  <div id="danskebank" class="modal" onclick="closeModal('danskebank')">
+  <div id="danskebank" class="modal">
     <!-- Modal content -->
     <div class="modal-content">
       <span class="close" onclick="closeModal('danskebank')">&times;</span>
@@ -434,7 +434,7 @@ html {
   </div> <!-- end of danskebank -->
 
 
-  <div id="pyramiden" class="modal" onclick="closeModal('pyramiden')">
+  <div id="pyramiden" class="modal">
     <!-- Modal content -->
     <div class="modal-content">
       <span class="close" onclick="closeModal('pyramiden')">&times;</span>
@@ -490,7 +490,7 @@ html {
   </div> <!-- end of pyramiden -->
 
 
-  <div id="ulriksdal" class="modal" onclick="closeModal('ulriksdal')">
+  <div id="ulriksdal" class="modal">
     <!-- Modal content -->
     <div class="modal-content">
       <span class="close" onclick="closeModal('ulriksdal')">&times;</span>
@@ -549,7 +549,7 @@ html {
   </div> <!-- end of ulriksdal -->
 
 
-  <div id="solna" class="modal" onclick="closeModal('solna')">
+  <div id="solna" class="modal">
     <!-- Modal content -->
     <div class="modal-content">
       <span class="close" onclick="closeModal('solna')">&times;</span>
@@ -596,7 +596,7 @@ html {
     </div>
   </div> <!-- end of solna -->
 
-  <div id="sture" class="modal" onclick="closeModal('sture')">
+  <div id="sture" class="modal">
     <!-- Modal content -->
     <div class="modal-content">
       <span class="close" onclick="closeModal('sture')">&times;</span>
@@ -636,7 +636,7 @@ html {
   </div> <!-- end of solna -->
 
 
-  <div id="avail" class="modal" onclick="closeModal('avail')">
+  <div id="avail" class="modal">
     <!-- Modal content -->
     <div class="modal-content">
       <span class="close" onclick="closeModal('avail')">&times;</span>
