--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ html {
   </div>
 
 
-  <div id="ala" class="modal>
+  <div id="ala" class="modal">
     <!-- Modal content -->
     <div class="modal-content">
       <span class="close" onclick="closeModal('ala')">&times;</span>
