added code for future changes

--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@ html {
   float: right;
   font-size: 28px;
   font-weight: bold;
+  /*text-shadow: 2px 2px 5px white;*/
+  border: 1px solid #FFF;
+  background-color: rgba(255,255,255,0.4);
+  border-radius: 25px; 
 }
 
 .close:hover,.close:focus {
@@ -303,9 +307,10 @@ html {
 
   <div id="ala" class="modal">
     <!-- Modal content -->
-    <div class="modal-content">
+    <div class="modal-content">      
       <span class="close" onclick="closeModal('ala')">&times;</span>
       <div class="w3-content w3-display-container">
+          <!--<span class="w3-display-topright close" onclick="closeModal('ala')">&nbsp;&times;&nbsp;</span>-->
           <img class="slides0" src="images/Ala1.png" style="width:100%">
           <img class="slides0" src="images/Ala2.png" style="width:100%">
           <img class="slides0" src="images/Ala3.png" style="width:100%">
