--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ html {
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container" onclick="openModal('pyramiden');showDivs(1, 3)">
-        <div class="w3-display-topleft w3-black w3-padding">SEB:s huvudkontor i Solna</div>
+        <div class="w3-display-topleft w3-black w3-padding">SEB:s huvudkontor</div>
         <img src="images/Pyramiden1.png" alt="House" style="width:100%">
       </div>
     </div>
