test med mobilfix

--- a/index.html
+++ b/index.html
@@ -90,12 +90,17 @@ html {
 
 #deftext {
   border: 1px solid #AAAAAA; 
-  padding: 10px; width: 50%; 
+  padding: 10px; 
+  width: 50%; 
   margin-top: 15px; 
   border-radius: 5px; 
   background-color: rgba(135,169,155,0.4);
   color: #000;
 
+}
+
+@media only screen and (max-width: 760px) {
+  #deftext { width: 100%; }
 }
 
 .pagecol {
