ändrat rubriker och mer mobilfixar

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ html {
 
 @media only screen and (max-width: 760px) {
   #deftext { width: 100%; }
+  #bannerpic {margin-top: 20px; }
 }
 
 .pagecol {
@@ -183,11 +184,10 @@ html {
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px; overflow: hidden;" id="home">
-  <img class="w3-image" src="images/Banner.png" alt="Architecture" width="1500" height="800">
+  <img class="w3-image" id="bannerpic" src="images/Banner.png" alt="Architecture" width="1500" height="800">
   <div class="w3-display-middle w3-margin-top w3-center">
 
-    <!--<p style="color: #FFFFFF; font-size: 90px;">REKOARK</p><br/>-->
-    <img src="images/RekoarkLogo.png">
+    <img class="w3-image" src="images/RekoarkLogo.png">
 
   </div>
 </header>
@@ -339,19 +339,19 @@ html {
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container" onclick="openModal('sture');showDivs(1, 6)">
-        <div class="w3-display-topleft w3-black w3-padding">Sturev&auml;gen</div>
+        <div class="w3-display-topleft w3-black w3-padding">Bost&auml;der</div>
         <img src="images/Sture1.png" alt="House" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container" onclick="openModal('danskebank');showDivs(1, 2)">
-        <div class="w3-display-topleft w3-black w3-padding">Danske bank</div>
+        <div class="w3-display-topleft w3-black w3-padding">Bank</div>
         <img src="images/Danskebank1.png" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container" onclick="openModal('pyramiden');showDivs(1, 3)">
-        <div class="w3-display-topleft w3-black w3-padding">SEB:s huvudkontor</div>
+        <div class="w3-display-topleft w3-black w3-padding">Kontor</div>
         <img src="images/Pyramiden1.png" alt="House" style="width:100%">
       </div>
     </div>
@@ -360,19 +360,19 @@ html {
   <div class="w3-row-padding">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container" onclick="openModal('ulriksdal');showDivs(1, 4)">
-        <div class="w3-display-topleft w3-black w3-padding">Ulriksdalsskolan</div>
+        <div class="w3-display-topleft w3-black w3-padding">Skolor</div>
         <img src="images/Ulriksdalsskolan1.png" alt="House" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container" onclick="openModal('solna');showDivs(1, 5)">
-        <div class="w3-display-topleft w3-black w3-padding">Solna stad</div>
+        <div class="w3-display-topleft w3-black w3-padding">Inredning</div>
         <img src="images/SolnaSoc1.png" alt="House" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container" onclick="openModal('arenan');showDivs(1, 1)">
-        <div class="w3-display-topleft w3-black w3-padding">Friends arena</div>
+        <div class="w3-display-topleft w3-black w3-padding">Arenor</div>
         <img src="images/Arenan1.png" alt="House" style="width:100%">
       </div>
     </div>
